--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jd.jd158.coderswag.Controler.MainActivity">
+    tools:context="com.jd.jd158.coderswag.Controler.ProductsActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/categoryListview"
+        android:id="@+id/productsListview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -24,9 +24,9 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Categories"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/categoryListview"
+        android:text="Products"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/productsListview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
